@startuml
title Cafe Ordering System - ER Diagram

entity USERS {
  * id : BIGINT <<PK>>
  --
  full_name : VARCHAR NOT NULL
  email : VARCHAR NOT NULL <<UNIQUE>>
  phone : VARCHAR NOT NULL
  password : VARCHAR
  role : VARCHAR
}

entity CATEGORY {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR NOT NULL <<UNIQUE>>
  description : VARCHAR
}

entity PRODUCT {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR NOT NULL
  description : VARCHAR
  price : DOUBLE
  available : BOOLEAN
  category_id : BIGINT <<FK>>
}

entity ORDERS {
  * id : BIGINT <<PK>>
  --
  created_at : TIMESTAMP
  status : VARCHAR
  total_price : DOUBLE
  user_id : BIGINT <<FK>>
}

entity ORDER_ITEM {
  * id : BIGINT <<PK>>
  --
  quantity : INT
  price : DOUBLE
  order_id : BIGINT <<FK>>
  product_id : BIGINT <<FK>>
}

entity PAYMENT {
  * id : BIGINT <<PK>>
  --
  amount : DOUBLE
  payment_method : VARCHAR
  payment_date : TIMESTAMP
  status : VARCHAR
  order_id : BIGINT <<FK, UNIQUE>>
}

USERS ||--o{ ORDERS : places
CATEGORY ||--o{ PRODUCT : contains
ORDERS ||--o{ ORDER_ITEM : contains
PRODUCT ||--o{ ORDER_ITEM : selected_in
ORDERS ||--o| PAYMENT : has

@enduml
